# github_label_wrangler

./: Cargo.toml  config.json.example
graphql/: issues.graphql  pull_requests.graphql
src/: config.rs  issue.rs  loader.rs  main.rs  pull_request.rs
