[package]
name = "github_label_update"
version = "0.1.0"
authors = ["Peter Arato <it.arato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
hyper-tls = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
